<resources>
    <string name="app_name">FloresDeBachApp</string>
    <string name="inicio">Inicio</string>
    <string name="action_search">Action Search</string>
    <string name="action_plus">Action Plus</string>
    <string name="action_settings">Action Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenida">Te damos la bienvenida!!</string>
    <string name="nombreOriginal">Nombre Original</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="facebook_app_id">1183253201823292</string>
    <string name="fb_login_protocol_scheme">fb1183253201823292</string>
    <string name="nombreEspanol">Nombre Español</string>
    <string name="grupo">Grupo</string>
    <string name="modalidad">Modalidad</string>
    <string name="palabra_clave">Palabra clave</string>
    <string name="tendencias">Tendencias psicosomaticas</string>
    <string name="aspectos">Aspectos positivos</string>
    <string name="como_actua">Como actua</string>
    <string name="descripcion">Descripción</string>
    <string name="clave">Claves</string>

</resources>
