<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/action_search"
        android:iconTint="@color/textoPrimario"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:iconTint="@color/colorAccent"
        android:title="@string/action_plus"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_close"
        android:icon="@drawable/ic_close_black_24dp"
        android:orderInCategory="100"
        android:iconTint="@color/colorAccent"
        android:title="@string/cerrar_sesion"
        app:showAsAction="never" />
</menu>