<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flores"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/card_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:padding="12dp"
            android:text="@string/bienvenida"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blancoTransparente"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="24dp"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/email"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:shadowColor="@color/colorPrimaryLight"
                    android:textColor="@color/colorAccent"
                    android:textColorHighlight="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="24dp"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:shadowColor="@color/colorPrimaryLight"
                    android:textColor="@color/colorAccent"
                    android:textColorHighlight="@color/colorPrimaryLight"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/button_ingresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/ingresar"
                    android:textSize="12sp"
                    android:textColor="@color/blanco"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_registrarse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/registrarse"
                    android:textSize="12sp"
                    android:textColor="@color/blanco"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <TextView
                android:id="@+id/error_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:visibility="invisible" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>